--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"D:\\Swabhav_Training\\23-unittesing-app","type":"PROJECT","hints":{"PROJECT_NAME":"23-unittesing-app"}},"com.techlabs:23-unittesing-app:0.0.1"]]
